dataset1235/2025-2/805158916/users/3688932496/executions/2651470117_2383239197.log
== RUN (2025-08-25 14:20:40)
-- CODE: 
from math import

import math
#entradas das distâncias e dos ângulos( em graus)
a = float (input("Informe a distância A:"))
print("")
b = float (input("Informea distância B:"))
print("")
g = float (input("Informe o grau:"))
print("")
 # de angulos para radianos
g_rad = math.radians(g)
# leis dos cossenos
cc = math.sqrt(a **2 + b **2 - 2 * a * b * math.cos(g_rad))
print(round(cc,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 1
    from math import
                    ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 1
    from math import
                    ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 1
    from math import
                    ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 1
    from math import
                    ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 1
    from math import
                    ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 1
    from math import
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:21:08)
-- CODE: 
import math
#entradas das distâncias e dos ângulos( em graus)
a = float (input("Informe a distância A:"))
print("")
b = float (input("Informea distância B:"))
print("")
g = float (input("Informe o grau:"))
print("")
 # de angulos para radianos
g_rad = math.radians(g)
# leis dos cossenos
cc = math.sqrt(a **2 + b **2 - 2 * a * b * math.cos(g_rad))
print(round(cc,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 03:22:21)
-- CODE: 
import math
#entradas das distâncias e dos ângulos( em graus)
a = float (input("Informe a distância A:"))
print("")
b = float (input("Informea distância B:"))
print("")
g = float (input("Informe o grau:"))
print("")
 # de angulos para radianos
g_rad = math.rad(g)
# leis dos cossenos
cc = math.sqrt(a **2 + b **2 - 2 * a * b * math.cos(g_rad))
print(round(cc,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    g_rad = math.rad(g)
            ^^^^^^^^
AttributeError: module 'math' has no attribute 'rad'
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    g_rad = math.rad(g)
            ^^^^^^^^
AttributeError: module 'math' has no attribute 'rad'
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    g_rad = math.rad(g)
            ^^^^^^^^
AttributeError: module 'math' has no attribute 'rad'
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    g_rad = math.rad(g)
            ^^^^^^^^
AttributeError: module 'math' has no attribute 'rad'
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    g_rad = math.rad(g)
            ^^^^^^^^
AttributeError: module 'math' has no attribute 'rad'
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    g_rad = math.rad(g)
            ^^^^^^^^
AttributeError: module 'math' has no attribute 'rad'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:20:05)
-- CODE: 
from math import *
#import math
#entradas das distâncias e dos ângulos( em graus)
a = float (input("Informe a distância A:"))
print("")
b = float (input("Informea distância B:"))
print("")
g = float (input("Informe o grau:"))
print("")
 # de angulos para radianos
g_rad = math (g)
#radians(
# leis dos cossenos
cc = math.sqrt(a **2 + b **2 - 2 * a * b * math.cos(g_rad))
print(round(cc,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    g_rad = math (g)
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    g_rad = math (g)
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    g_rad = math (g)
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    g_rad = math (g)
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    g_rad = math (g)
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    g_rad = math (g)
            ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:20:52)
-- CODE: 
import math
#entradas das distâncias e dos ângulos( em graus)
a = float (input("Informe a distância A:"))
print("")
b = float (input("Informea distância B:"))
print("")
g = float (input("Informe o grau:"))
print("")
 # de angulos para radianos
g_rad = math.radians(g)
# leis dos cossenos
cc = math.sqrt(a **2 + b **2 - 2 * a * b * math.cos(g_rad))
print(round(cc,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
9.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:18:36)
-- CODE: 
from math import *
#import math
#entradas das distâncias e dos ângulos( em graus)
a = float (input("Informe a distância A:"))
print("")
b = float (input("Informea distância B:"))
print("")
g = float (input("Informe o grau:"))
print("")
 # de angulos para radianos
g_rad = math.radians(g)
# leis dos cossenos
cc = math.sqrt(a **2 + b **2 - 2 * a * b * math.cos(g_rad))
print(round(cc,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    g_rad = math.radians(g)
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    g_rad = math.radians(g)
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    g_rad = math.radians(g)
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    g_rad = math.radians(g)
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    g_rad = math.radians(g)
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    g_rad = math.radians(g)
            ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 03:23:18)
-- CODE: 
import math
#entradas das distâncias e dos ângulos( em graus)
a = float (input("Informe a distância A:"))
print("")
b = float (input("Informea distância B:"))
print("")
g = float (input("Informe o grau:"))
print("")
 # de angulos para radianos
g_rad = math.radians(g)
# leis dos cossenos
cc = math.sqrt(a **2 + b **2 - 2 * a * b * math.cos(g_rad))
print(round(cc,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
9.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 03:18:40)
-- CODE: 
import math
#entradas das distâncias e dos ângulos( em graus)
a = float (input())
b = float (input())
g = float (input())
 # de angulos para radianos
g_rad = math.rad(g)
# leis dos cossenos
c = math.sqrt(a **2 + b **2 - 2 * a * b * math.cos(g_rad))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    g_rad = math.rad(g)
            ^^^^^^^^
AttributeError: module 'math' has no attribute 'rad'
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    g_rad = math.rad(g)
            ^^^^^^^^
AttributeError: module 'math' has no attribute 'rad'
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    g_rad = math.rad(g)
            ^^^^^^^^
AttributeError: module 'math' has no attribute 'rad'
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    g_rad = math.rad(g)
            ^^^^^^^^
AttributeError: module 'math' has no attribute 'rad'
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    g_rad = math.rad(g)
            ^^^^^^^^
AttributeError: module 'math' has no attribute 'rad'
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    g_rad = math.rad(g)
            ^^^^^^^^
AttributeError: module 'math' has no attribute 'rad'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 03:21:17)
-- CODE: 
import math
#entradas das distâncias e dos ângulos( em graus)
a = float (input("Informe a distância A:"))
b = float (input("Informea distância B"))
g = float (input("Informe o grau:"))
 # de angulos para radianos
g_rad = math.rad(g)
# leis dos cossenos
cc = math.sqrt(a **2 + b **2 - 2 * a * b * math.cos(g_rad))
print(round(cc,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    g_rad = math.rad(g)
            ^^^^^^^^
AttributeError: module 'math' has no attribute 'rad'
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    g_rad = math.rad(g)
            ^^^^^^^^
AttributeError: module 'math' has no attribute 'rad'
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    g_rad = math.rad(g)
            ^^^^^^^^
AttributeError: module 'math' has no attribute 'rad'
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    g_rad = math.rad(g)
            ^^^^^^^^
AttributeError: module 'math' has no attribute 'rad'
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    g_rad = math.rad(g)
            ^^^^^^^^
AttributeError: module 'math' has no attribute 'rad'
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    g_rad = math.rad(g)
            ^^^^^^^^
AttributeError: module 'math' has no attribute 'rad'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 03:23:41)
-- CODE: 
import math
#entradas das distâncias e dos ângulos( em graus)
a = float (input("Informe a distância A:"))
print("")
b = float (input("Informea distância B:"))
print("")
g = float (input("Informe o grau:"))
print("")
 # de angulos para radianos
g_rad = math.radians(g)
# leis dos cossenos
cc = math.sqrt(a **2 + b **2 - 2 * a * b * math.cos(g_rad))
print(round(cc,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
